syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "review/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

/*
用户发表评论
    ↓
[评论状态: 10-待审核]
    ↓
运营审核评论 ← AuditReview
    ↓
[评论状态: 20-已发布] 或 [评论状态: 30-驳回]
    ↓
商家发起申诉 ← AppealReview
    ↓
[申诉状态: 10-待审核]
    ↓
运营审核申诉 ← AuditAppeal
    ↓
[申诉状态: 20-通过] 或 [申诉状态: 30-驳回]
    ↓
[评论状态: 40-申诉通过]
*/

// 定义评论服务
service Review {
	// C端创建评论
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply) {
		option (google.api.http) = {
			post:"/v1/review"
			body:"*"
		};
	};
	// C端获取评论
	rpc GetReview (GetReviewRequest) returns (GetReviewReply) {
		option (google.api.http) = {
			get:"/v1/review/{reviewID}"
		};
	};
	// O端审核评论
	rpc AuditReview (AuditReviewRequest) returns (AuditReviewReply) {
		option (google.api.http) = {
			post:"/v1/review/audit"
			body:"*"
		};
	};
	// B端回复评论
	rpc ReplyReview (ReplyReviewRequest) returns (ReplyReviewReply) {
		option (google.api.http) = {
			post:"/v1/review/reply"
			body:"*"
		};
	};
	// B端申诉评论
	rpc AppealReview (AppealReviewRequest) returns (AppealReviewReply) {
		option (google.api.http) = {
			post:"/v1/review/appeal"
			body:"*"
		};
	};
	// O端评论申诉审核
	rpc AuditAppeal (AuditAppealRequest) returns (AuditAppealReply) {
		option (google.api.http) = {
			post:"/v1/appeal/audit"
			body:"*"
		};
	};

	// 根据商家ID获取评论列表（分页）
	rpc ListReviewByStoreID (ListReviewByStoreIDRequest) returns (ListReviewByStoreIDReply) {
		option (google.api.http) = {
			get:"/v1/review/store/{storeID}"
		};
	}

	// 根据用户ID获取评论列表（分页）
	rpc ListReviewByUserID (ListReviewByUserIDRequest) returns (ListReviewByUserIDReply) {
		option (google.api.http) = {
			get:"/v1/review/user/{userID}"
		};
	}
}
// 根据商家ID获取评论列表（分页）请求
message ListReviewByStoreIDRequest {
	int64 storeID = 1 [(validate.rules).int64 = {gt: 0}];
	int32 page = 2 [(validate.rules).int32 = {gt: 0}];
	int32 size = 3 [(validate.rules).int32 = {gt: 0}];
}

// 根据商家ID获取评论列表（分页）回复
message ListReviewByStoreIDReply {
	repeated ReviewInfo list = 1;
}

// 根据用户ID获取评论列表（分页）请求
message ListReviewByUserIDRequest {
	int64 userID = 1 [(validate.rules).int64 = {gt: 0}];
	int32 page = 2 [(validate.rules).int32 = {gt: 0}];
	int32 size = 3 [(validate.rules).int32 = {gt: 0}];
}

// 根据用户ID获取评论列表（分页）回复
message ListReviewByUserIDReply {
	repeated ReviewInfo list = 1;
}

// 评论信息
message ReviewInfo {
	int64 reviewID = 1;
	int64 userID = 2;
	int64 orderID = 3;
	int64 storeID = 4;
	int32 score = 5;
	int32 serviceScore = 6;
	int32 expressScore = 7;
	string content = 8;
	string picInfo = 9;
	string videoInfo = 10;
	int32 status = 11;
}

// 创建评论请求
message CreateReviewRequest {
	int64 userID = 1;
	int64 orderID = 2;
	int64 storeID = 3;
	int32 score = 4 [(validate.rules).int32 = {in: [1, 2, 3, 4, 5]}];
	int32 serviceScore = 5 [(validate.rules).int32 = {in: [1, 2, 3, 4, 5]}];
	int32 expressScore = 6 [(validate.rules).int32 = {in: [1, 2, 3, 4, 5]}];
	string content = 7 [(validate.rules).string = {min_len:2, max_len:200}];
	string picInfo = 8;
	string videoInfo = 9;
	bool anonymous = 10;
}

// 创建评论回复
message CreateReviewReply {
	ReviewInfo reviewInfo = 1;
}

// 获取评论请求
message GetReviewRequest {
	int64 reviewID = 1 [(validate.rules).int64 = {gt: 0}];
}

// 获取评论回复
message GetReviewReply {
	ReviewInfo reviewInfo = 1;
}

// 审核评论请求
message AuditReviewRequest {
	int64 reviewID = 1 [(validate.rules).int64 = {gt: 0}];
	int32 status = 2 [(validate.rules).int32 = {gt: 0}];
	string opUser = 3 [(validate.rules).string = {min_len:2}];
	string opReason = 4 [(validate.rules).string = {min_len:2}];
	optional string opRemarks = 5;
}

// 审核评论回复
message AuditReviewReply {
	int64 reviewID = 1;
	int32 status = 2;
}

message ReplyReviewRequest {
	int64 reviewID = 1 [(validate.rules).int64 = {gt: 0}];
	int64 storeID = 2 [(validate.rules).int64 = {gt: 0}];
	string content = 3 [(validate.rules).string = {min_len:2, max_len:200}];
	string picInfo = 4;
	string videoInfo = 5;
}

// 回复评论回复
message ReplyReviewReply {
	int64 replyID = 1;
}

// 申诉评论请求
message AppealReviewRequest {
	int64 reviewID = 1 [(validate.rules).int64 = {gt: 0}];
	int64 storeID = 2 [(validate.rules).int64 = {gt: 0}];
	string reason = 3 [(validate.rules).string = {min_len:2, max_len:200}];
	string content = 4 [(validate.rules).string = {min_len:2, max_len:200}];
	string picInfo = 5;
	string videoInfo = 6;
}

// 申诉评论回复
message AppealReviewReply {
	int64 appealID = 1;
	int32 status = 2;	
}

// 审核申诉请求
message AuditAppealRequest {
	int64 appealID = 1 [(validate.rules).int64 = {gt: 0}];
	int32 status = 2 [(validate.rules).int32 = {gt: 0}];
	string opUser = 3 [(validate.rules).string = {min_len:2}];
	string opReason = 4 [(validate.rules).string = {min_len:2}];
	optional string opRemarks = 5;
}

// 审核申诉回复
message AuditAppealReply {
	int64 appealID = 1;
	int32 status = 2;
}